# Nemotron-Model

./: .gitignore  README.md  pyproject.toml  requirements-train.txt
docs/: classify_divide_trace_sft.md
kaggle_notebooks/: 03-tong-ultra-low-drift.ipynb  05-tong-query-focus.ipynb
scripts/: build_improved_notebook.py  sync_repo_to_hpc.py  train_trl_kaggle_sim.py
slurm/: submit_train.sh  train_nemotron_sft.sbatch
src/nemotron_model/: __init__.py  data_bridge.py
tests/: test_data_bridge.py
